<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".MainActivity">
<item
    android:id="@+id/action_directEnable"
    android:title="@string/enable_p2p_button"
    android:orderInCategory="1"
    app:showAsAction="never"/>
<item
    android:id="@+id/action_directDiscover"
    android:title="@string/discover_peers_button"
    android:orderInCategory="3"
    app:showAsAction="never"/>
<item
    android:id="@+id/action_directCreateGroup"
    android:title="@string/create_group_button"
    android:orderInCategory="2"
    app:showAsAction="never"/>
<item
    android:id="@+id/action_directRemoveGroup"
    android:title="@string/remove_group_button"
    android:orderInCategory="5"
    app:showAsAction="never"/>
<item
    android:id="@+id/action_directSeeGroup"
    android:title="@string/see_group_button"
    android:orderInCategory="4"
    app:showAsAction="never"/>

</menu>
